fix: Update environment variables to use VITE_API_BASE_URL for backend configuration

--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,2 +1,2 @@
 # In Production
-REACT_APP_BACKEND_URL = "https://llmbeing-backend.onrender.com"
+VITE_API_BASE_URL = "https://llmbeing-backend.onrender.com"
