--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,2 +1,2 @@
 # In Production
-VITE_API_BASE_URL = "https://llmbeing-backend.onrender.com"
+VITE_API_BASE_URL = https://llmbeing-backend.onrender.com
