--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "react-hook-form": "^7.56.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.5.0",
+    "socket.io-client": "^4.8.1",
     "tailwindcss": "^4.1.4"
   },
   "devDependencies": {
