--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,5 +1,48 @@
 {
   "rewrites": [
-    { "source": "/(.*)", "destination": "/index.html" }
+    {
+      "source": "/api/v1/:path*",
+      "destination": "https://llmbeing-backend.onrender.com/api/v1/:path*"
+    },
+    {
+      "source": "/((?!api).*)",
+      "destination": "/index.html"
+    }
+  ],
+  "headers": [
+    {
+      "source": "/api/v1/:path*",
+      "headers": [
+        {
+          "key": "X-Forwarded-Host",
+          "value": "llmbeing.vercel.app"
+        },
+        {
+          "key": "X-Forwarded-Proto",
+          "value": "https"
+        },
+        {
+          "key": "X-Real-IP",
+          "value": "$remote_addr"
+        }
+      ]
+    },
+    {
+      "source": "/(.*)",
+      "headers": [
+        {
+          "key": "X-Frame-Options",
+          "value": "DENY"
+        },
+        {
+          "key": "X-Content-Type-Options",
+          "value": "nosniff"
+        },
+        {
+          "key": "Referrer-Policy",
+          "value": "origin-when-cross-origin"
+        }
+      ]
+    }
   ]
 }
